--- a/db_project/templates/index.html
+++ b/db_project/templates/index.html
@@ -14,7 +14,7 @@
         var df1 = {{df1|safe}};
     const ctx = document.getElementById('myChart').getContext('2d');
     const myChart = new Chart(ctx, {
-        type: 'pie',
+        type: 'doughnut',
         data: {
             labels: df1,
             datasets: [{
