--- a/db_project/templates/signup.html
+++ b/db_project/templates/signup.html
@@ -41,7 +41,15 @@
                            placeholder="비밀번호를 입력하세요."
                            name="password">
                 </div>
-                <button type="submit" class="btn btn-primary">확인</button>
+                <div class="form-group">
+                    <label for="re-password">비밀번호 확인</label>
+                    <input type="re-password"
+                           class="form-control"
+                           id="re-password"
+                           placeholder="비밀번호를 다시 입력하세요."
+                           name="re-password">
+                </div>
+                <button type="submit" class="btn btn-primary">등록</button>
             </form>
         </div>
     </div>
