--- a/db_project/templates/login.html
+++ b/db_project/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>회원가입</title>
+    <title>로그인</title>
  
     <!--    Bootstrap 초기화 부분 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -15,7 +15,7 @@
  
     <div class="row mt-5">
         <div class="col-12 text-center">
-            <h1>회원가입</h1>
+            <h1>로그인</h1>
         </div>
     </div>
  
@@ -42,6 +42,14 @@
                            name="password">
                 </div>
                 <button type="submit" class="btn btn-primary">확인</button>
+            </form>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-12">
+            <form method="get" action="signup"> <!-- POST method -->
+                {% csrf_token %} 
+                <button type="submit" class="btn btn-primary">회원가입</button>
             </form>
         </div>
     </div>
