--- a/db_project/templates/signup.html
+++ b/db_project/templates/signup.html
@@ -21,7 +21,7 @@
  
     <div class="row mt-5">
         <div class="col-12">
-            <form method="post" action="login"> <!-- POST method -->
+            <form method="post" action="signup"> <!-- POST method -->
                 {% csrf_token %} 
  
                 <div class="form-group">
@@ -34,6 +34,15 @@
                            name="username">
                 </div>
                 <div class="form-group">
+                    <label for="userid">사용자 아이디</label>
+                    <input type="text"
+                           class="form-control"
+                           id="userid"
+                           aria-describedby="emailHelp"
+                           placeholder="아이디를 입력하세요."
+                           name="userid">
+                </div>
+                <div class="form-group">
                     <label for="password">비밀번호</label>
                     <input type="password"
                            class="form-control"
@@ -43,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label for="re-password">비밀번호 확인</label>
-                    <input type="re-password"
+                    <input type="password"
                            class="form-control"
                            id="re-password"
                            placeholder="비밀번호를 다시 입력하세요."
